# ChangeLog for dev-util/netbeans
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  04 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled java cluster runtime jars

  03 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled compile time jars needed for java cluster

  02 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Fixed removal of bundled jars

  02 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled jars needed for harness cluster

  01 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled jars for ide cluster needed for runtime

  01 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled ide cluster compile time jars, added Gentoo NetBeans ID

  30 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Partially unbundled jars needed for ide cluster

  30 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org>
  netbeans-6.5_beta.ebuild:
  Unbundled jars needed for netbeans platform

  13 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.5_alpha1.ebuild, +netbeans-6.5_beta.ebuild:
  netbeans bumped to 6.5 beta

  01 Aug 2008; Miroslav Šulc <fordfrog@gentoo.org> ++:
  Added ebuild for netbeans 6.5 milestone 1 - but it seems it is not
  possible to build netbeans using the official sources

  18 Jul 2008; Miroslav Šulc <fordfrog@gentoo.org> netbeans-6.1-r1.ebuild:
  Now depending on ant-1.7.1 which introduces /usr/share/ant/lib directory -
  reported by Betelgeuse

  30 Apr 2008; Miroslav Šulc <fordfrog@gentoo.org> -netbeans-6.1.ebuild,
  +netbeans-6.1-r1.ebuild:
  Fixed ant link

  30 Apr 2008; Miroslav Šulc <fordfrog@gentoo.org>
  -netbeans-6.1_alpha20080118072101.ebuild,
  -netbeans-6.1_alpha20080207142509.ebuild,
  +files/6.1/nbbuild-build.xml.patch, +netbeans-6.1.ebuild,