@@ -73,6 +73,6 @@ DIST netbeans-websvc-6.0.tar.bz2 21262337 RMD160 aa0eea92a59cad8c5907c9a5be41a1a
 DIST netbeans-xml-6.0.tar.bz2 4404173 RMD160 6360765b44e988fb1ad4e529630ac1abbc4dae9d SHA1 92f489b03154a8153f8508387886afb9fbfa1959 SHA256 5d63287da3cfc42cbfb24ab619d1e96ff625124e1225c5377aa5d8c22deaecd9
 EBUILD netbeans-6.0.ebuild 32690 RMD160 53bf60c90e06f5fbb4b08a2363e750abf0a1b563 SHA1 9725266d8090a628691fa55fa179d5f8c72a3799 SHA256 a663b402ecd295ed316307b1be3772781e9f87c4013f6b1670a1ce1ca99d7669
 EBUILD netbeans-6.1-r1.ebuild 16545 RMD160 ae5471ae840869fbc962fceb48f8ee811efae729 SHA1 d4782ff9271907bbb98e64029be47bfce3d8677a SHA256 b5ffe94c7e7f66a7981c076c54fdc847a5773f4cf890c789935fbaee07299c2e
-EBUILD netbeans-6.5_beta.ebuild 23243 RMD160 21855eb4def622f188af1686317da57b31781444 SHA1 9eb1f462817659cce9a4d1390c32e1c01a979d21 SHA256 372470584387e72ea826b9da231b9a14eca82cdb4246ae18dbe8ade3d99dfca8
-MISC ChangeLog 24543 RMD160 bac6113fda5bba417fb4808bda6cd32eedc1e636 SHA1 0e7772a7bb353b12d07beb51e371c66fef4142c5 SHA256 ee0da28afa997b1030b2e7b5dd8ca01273cfc6da94c0b906e3fdf00c6d3b9c7e
+EBUILD netbeans-6.5_beta.ebuild 23686 RMD160 3615d4e137062722e0870e968759741ab4ed235a SHA1 f23517467ccb90431261259b6fd5278fbd968c60 SHA256 05f700239983c348876873d523d52a199de8a6dfab128f42f744885ad6dce8e3
+MISC ChangeLog 24653 RMD160 ce9038dab9fcc6534abb8ea98bc21ab1ba515c15 SHA1 0f4d302fc93dacec7eb30046424abbc7bdd1a7b2 SHA256 defb927929a65dc20f5e5ad8143df98f9e929caf66c9da9e599d4650ade679f0
 MISC metadata.xml 1128 RMD160 9ba1b3fec0fedacd10416e7c61edfecada1912cd SHA1 997b3db42167a9e591c3667ffddd125bbb85fa98 SHA256 8c524b060fdbfc4aa432a528c2e78ad05eb20fcf4bc8973c1c8366699bb90b5a
